--- a/media-queries/nav.html
+++ b/media-queries/nav.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Responsive Nav</title>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/nav.css" rel="stylesheet">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
           
 </head>
